tests: add frontend/backend test suites ad fix major-version breakage